ingress/yaml/couchbase-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-couchbase
spec:
  hosts:
  - "couchbase.hender.tech"
  gateways:
  - istio-system/my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-couchbase.couchbase.svc.cluster.local
        port:
          number: 8091
