ingress/yaml/kubernetes-dashboard-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard
spec:
  hosts:
  - "hender.tech"
  gateways:
  - istio-system/my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-kubernetes-dashboard
        port:
          number: 9090
